--- a/public/partials/landingHeader.hbs
+++ b/public/partials/landingHeader.hbs
@@ -11,11 +11,10 @@
     position: fixed;
     top: 0px;
     height: 70px; 
-    background-color: rgb(20, 19, 19);
+    background-color: #1d0324;
     display:flex;
     width: 100%;
-    box-shadow: 2px 1px 20px #20D982;
-
+    z-index: 1000;
   }
   .header-left{
     flex: 1;
