--- a/public/partials/landingHeader.hbs
+++ b/public/partials/landingHeader.hbs
@@ -89,14 +89,14 @@
 
 <header>
   <div class="header-left">
-    <a href="{{homeLink}}">
+    <a href="#" onclick="showHomePage()">
     <img id="logo-img" src="/images/new_logo_2.png" alt="Money Mind Logo">
     </a>
   </div>
  
   <div class="header-middle">
     <ul>
-      <li><a href="{{homeLink}}">Home</a></li>
+      <li><a href="#" onclick="showHomePage()">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#services">Services</a></li>
     </ul>
@@ -104,8 +104,8 @@
 
   <div class="header-right">
     <ul>
-      <li><a href="/auth/signin">Sign In</a></li>
-      <li><a href="/auth/signup">Register</a></li>
+      <li><a href="#" onclick="showSignInPage()">Sign In</a></li>
+      <li><a href="#" onclick="showRegisterPage()">Register</a></li>
     </ul>
   </div>  
   
