--- a/public/partials/landingHeader.hbs
+++ b/public/partials/landingHeader.hbs
@@ -71,15 +71,16 @@
 
 
 @media (max-width: 768px) {
-     .header-middle,.header-right{
-        height:15px;
+   
+    .header-right{
+      display: none;
+      flex:1.5;
+      margin-right: 5px;
     }
-    
-    .header-middle li a,.header-right li a{
-      font-size: 10px;
-    
-    }
- 
+    .header-middle li a{
+      margin: 15px; 
+
+}
 
 
 }
@@ -110,3 +111,4 @@
   </div>  
   
 </header>
+
