--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -45,8 +45,20 @@
   background-color: #bbe86f;
 }
 @media (max-width: 768px) {
-.hero-section h2 {
+.hero-section h1 {
   font-size: 35px;
+}
+.image-section{
+  display: none;
+}
+.body{
+  width:100%;
+  height: 450px;
+}
+.hero-section{
+  width:500px;
+  margin-left: 0px;
+
 }
 
 }
