--- a/public/partials/Auth.hbs
+++ b/public/partials/Auth.hbs
@@ -35,7 +35,7 @@
       </div>
       <div class="errorMessages" style="color: rgb(238, 9, 9); display: block;"></div>
       <p class="wait" style="display:none;">Just a moment, your OTP is on the way! (5 seconds)</p>
-      <input class="sub" type="submit" value="generate OTP">
+      <input class="sub" type="submit" value="send OTP">
       </br><br>
       <p style="display: inline;">Already have an account?</p>
       <a href="#" onclick="showSignInPage()">Signin</a>
