--- a/public/views/landing.hbs
+++ b/public/views/landing.hbs
@@ -25,8 +25,8 @@
         </div>
         <div class="main-section">
             <div id="hero" class="hero-section" style="display: block;">
-                <h1>Effortless Financial Management at <span class="yellow">Your Fingertips </span> </h1>
-                <p>Create an account today and begin tracking all your expenses, </br>organizing transactions, and monitoring subscriptions in real time,</br> helping you stay in control of your financial health.</p>
+                <h1>Effortless Financial Management at <span style="color:#bbe86f;">Your Fingertips </span> </h1>
+                <p>Create an account today and begin tracking all your expenses,organizing transactions, and monitoring subscriptions in real time, helping you stay in control of your financial health.</p>
                 <button class="cta-btn" onclick="showSignInPage()">Get Started Now</button>
             </div>
             {{> Auth}}
