--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,19 +1,40 @@
-.body{
+body{
   display: flex;
-  margin-top: 100px;
-  height: 550px;
+  flex-direction: column;
 }
+
+.body {
+  margin-top: 150px;
+  display: flex;
+  justify-content: space-between; /* This ensures space between the items */
+  align-items: flex-start; /* Aligns items to the top */
+
+}
+
+.image-section {
+  margin-top: 80px;
+  flex: 0.4; /* Makes image section take up available space */
+  flex-shrink: 1; /* Allows the image section to shrink */
+  flex-basis: 0;
+}
+
+.main-section {
+  flex: 0.6; /* Makes the form section take up available space */
+  display: flex;
+  flex-shrink: 1; /* Allows the form section to shrink */
+  flex-basis: 0; 
+  justify-content: center; /* Centers the form horizontally inside the main-section */
+  align-items: flex-start; /* Aligns form to the top */
+
+}
+
 .hero-section {
   text-align: center;
   font-family: "Space Grotesk", serif;
   font-weight: 400;
-  margin-left: -100px;
-  bottom: 0px;
+  width:100%;
 }
-.yellow{
-  color:#bbe86f;
-  
-}
+
 .hero-section h1{
   font-size: 60px;
   color:white;
@@ -25,13 +46,7 @@
   font-style: normal;
   line-height: 1.5;
 }
-.hero-left-img{
-  top:180px;
-  margin-top: 230px;
-  border:solid;
-  border-color: solid;
-  display: inline-block;
-}
+
 .cta-btn {
   background-color: #20D982;
   border: none;
@@ -44,7 +59,16 @@
 .cta-btn:hover {
   background-color: #bbe86f;
 }
+.hero-left-img {
+  width: 100%; /* Make the image responsive */
+  max-width: 600px; /* Limits the width to 600px max */
+  height: auto; /* Keeps the aspect ratio of the image intact */
+}
+
 @media (max-width: 768px) {
+  .main-section {
+    flex:1;
+  }
 .hero-section h1 {
   font-size: 35px;
 }
@@ -56,9 +80,7 @@
   height: 450px;
 }
 .hero-section{
-  width:500px;
-  margin-left: 0px;
-
+  width:100%;
 }
 
 }
