Home Interface Completed

--- a/public/partials/Auth.hbs
+++ b/public/partials/Auth.hbs
@@ -22,8 +22,7 @@
 
 
     <form id="signupForm" style="display: none;">
-      <h2>Signup to MoneyMind</h2>
-      <p>Track smart,spend wisely</p></br>
+      <h2>Create an Account</h2>
       <input placeholder="Email" name="email" type="text" id="email"required>
       <br>
       <div style="position: relative; display: inline-block;">
@@ -40,9 +39,6 @@
       <p style="display: inline;">Already have an account?</p>
       <a href="#" onclick="showSignInPage()">Signin</a>
     </form>
-
-
-
 
 
     <form id="reset-otp-generate-form" style="display: none;">
