--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,8 +1,67 @@
-
-#home-div{
-  margin-top: 100px;
+#home{
   display: flex;
+  flex-direction: column;
 }
+#panel{
+  display: flex;
+
+}
+#left-panel{
+  padding-left: 20px;
+  margin-top: 72px;
+  background-color: #280832;
+  width: 14%;
+  position:fixed;
+  height: 89vh;
+
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#left-panel-top ul, 
+#left-panel-bottom ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+#left-panel-top a,li, 
+#left-panel-bottom a,li {
+  text-decoration: none;
+  color:white;
+}
+
+#left-panel-top ul li, 
+#left-panel-bottom ul li {
+  padding: 10px;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+#left-panel-top ul li:hover, 
+#left-panel-bottom ul li:hover {
+  background-color: #83bce3;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3); /* Adds a subtle shadow */
+  transform: scale(1.05); /* Slightly enlarges the item */
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+#left-panel-bottom {
+  border-top: 1px solid #ccc; /* Visual separation */
+}
+
+#right-panel{
+  width:100%;
+  flex:0.85;
+  margin-top: 100px;
+  display: grid;
+  grid-column: auto;
+  margin-left:17%;
+}
+
 #dashBoard {
   display: inline-block;
   left: 10px;
@@ -25,7 +84,7 @@
 }
 
 @media (max-width: 768px) {
-  #home-div{
+  #right-panel{
     margin-top: 150px;
   }
   #dashBoard {
