--- a/public/partials/homeHeader.hbs
+++ b/public/partials/homeHeader.hbs
@@ -24,7 +24,8 @@ header {
   align-items: center; /* Vertically center the content */
 }
 #logo-img {
-  width: 200px;
+
+  width: 170px;
   height: auto; /* Maintain aspect ratio */
   object-fit: contain; /* Ensure the image fits the container */
   transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition for hover effects */
@@ -69,6 +70,7 @@ header {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
   transform: scale(1.05); /* Slightly enlarge the item */
 }
+
 
 
 #profileButton:hover #menu-img {
@@ -151,10 +153,9 @@ header {
     </div>
     <div class="header-middle">
       <ul>
-        <li><a href='#'>Goals</a></li>
-        <li><a href='/home'>Overview</a></li>
-        <li><a href='#'>Savings</a></li>
-        <li><a href='/add-expense'>add</a></li>
+        <li id="transaction-link"><a href='/fetch-transactons'>Transactions</a></li>
+        <li id="home-link"><a href='/home'>Overview</a></li>
+        <li id="add-link"><a href='/add-transaction'>add</a></li>
       </ul>
     </div>
 </header>
